# sanskrit-engine

./: .gitignore  README.md  ROADMAP.md  add_rule2.py  add_rules.py  build_pratipadika_db.py  demo_algebra.py  demo_full_system.py  demo_tensor_generator.py  dhatu_data_conversion.py  external_words_vectors.json  fix_oov.py  generate_tinganta.py  gita_shloka_vectors.json  pyproject.toml  run_gita_demo.py  tensor_cache.json  test.py  test_6d.py  test_7d.py  test_db_rules.py  test_debug.py  test_decode.py  test_decode2.py  test_dhatu_structure.py  test_io.py  test_ramate.py  time_test.py
data/: ashtadhyayi_db.json  closed_class.json  full_demo_db.json  optimized_dhatu.json  sample_rules.json  test_algebra_db.json  test_db.json  test_tokenizer_db.json  verb_stem_exceptions.json
docs/: grammar_intro.md  kasika_mahabhashya_extracts.md  laghu_kaumudi_extracts.md  rca_basic_grammar_tests.md  rule_authoring.md  sanskrit_llm_architecture.md  siddhanta_kaumudi_extracts.md
examples/: run_sample.py
sanskrit_engine/: __init__.py  accent.py  anubandha.py  batch_compiler.py  cli.py  compiler_pipeline.py  config_index.py  conflict.py  coverage.py  dataset.py  enforcer.py  engine.py  generator.py  legacy_old.py  lexicon.py  llm_compiler.py  loader.py  morphology.py  panini_parser.py  parser.py  phoneme.py  phonology.py  pratipadika_db.py  pratyahara.py  preprocessor.py  rule_database.py  rules.py  sandhi.py  sutra.py  syntax_tree.py  tensor_tokenizer.py  tinganta_db.py  token.py  transliterate_fst.py  validator.py  word2vec.py
tests/: basic_grammar_tests.json  run_grammar_tests.py  (+10 more)
(+6 files in other folders)
